# CompMath

Р3208/grishchenko_408498/lab1/: CMakeLists.txt  main.cpp  matrixSolver.cpp  matrixSolver.h  utils.cpp  utils.h
Р3208/grishchenko_408498/lab2/: CMakeLists.txt  equationsSolver.cpp  equationsSolver.h  main.cpp  utils.hpp
Р3208/grishchenko_408498/lab3/: CMakeLists.txt  integralSolver.cpp  integralSolver.h  main.cpp  utils.hpp
Р3208/grishchenko_408498/lab5/: CMakeLists.txt  interpolationSolver.cpp  interpolationSolver.h  main.cpp  utils.hpp
Р3208/grishchenko_408498/lab6/: CMakeLists.txt  ODESolver.cpp  ODESolver.h  main.cpp  utils.hpp
